# Loom

./: .env.example  .gitignore  LICENSE  README.md  loom.example.toml  pyproject.toml  requirements.txt
loom/: __init__.py  agent.py  cli.py  colors.py  config.py  mcp_runtime.py  skills.py  vault.py  wrapping.py
loom/providers/: __init__.py  base.py  openrouter.py  vertex.py
loom/tools/: __init__.py  excel.py  filesystem.py  registry.py  search.py  shell.py
skills/: coding.md
tests/: test_colors.py  test_config.py  test_providers.py  test_skills.py  test_tools.py  test_vault.py  test_wrapping.py
